Switch to Viewport

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "@types/node": "^16.18.12",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.10",
-    "pixi.js": "^7.2.0-beta",
+    "pixi-viewport": "github:cuire/pixi-viewport#v5",
+    "pixi.js": "^7.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
